--- a/pug/post.pug
+++ b/pug/post.pug
@@ -123,6 +123,67 @@ block content
 							.comment__date
 									span 12 Декабря 2018, 16:32
 							.comment__text
-								p= items[2].text
+								p
+									| Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. 
+								p
+									| Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.
 							.comment__link
 								a(href="#") Ответить
+		.comment
+			.comment-box
+				.comment__avatar(style='background-image: url(img/person-photo-04.jpg)')
+				.comment__content
+					.tagbox.comment__tagbox
+						.tag
+							.comment__nickname
+								span
+									| ДМИТРИЙ ЧЕРНЫШЕВ
+						.like-card
+							button.like-button.comment-button.like-button_thin
+								i #
+								span.like-count 120
+							button.like-button.like-button_thin
+								i.icon-like
+								span.like-count 86
+
+					.comment__date
+							span 12 Декабря 2018, 16:32
+					.comment__text
+						p
+							| Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.
+					.comment__link
+						a(href="#") Ответить
+		.comment
+			.comment-box
+				.comment__avatar(style='background-image: url(img/person-photo-05.jpg)')
+				.comment__content
+					.tagbox.comment__tagbox
+						.tag
+							.comment__nickname
+								span
+									| ЕЛЕНА МАЦИНОВА
+						.like-card
+							button.like-button.comment-button.like-button_thin
+								i #
+								span.like-count 120
+							button.like-button.like-button_thin
+								i.icon-like
+								span.like-count 86
+
+					.comment__date
+							span 12 Декабря 2018, 16:32
+					.comment__text
+						p
+							| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
+					.comment__link
+						a(href="#") Ответить
+		.comment.comment_special
+			.article-autor
+				p.article-autor__left Оставить комментарий:
+				p от Константина Константинопольского
+		.comment
+			form.comment-form
+				.comment-form__textareabox
+					textarea.comment-form__textarea(placeholder="Комментарий")
+				.comment-form__btnbox
+					button.button.comment-form__button(type="submit") Отправить
