--- a/css/style.css
+++ b/css/style.css
@@ -708,7 +708,8 @@ input,
 button:focus,
 select:focus,
 input:focus,
-a:focus textarea:focus {
+a:focus,
+textarea:focus {
   outline: none;
 }
 
@@ -3993,6 +3994,15 @@ h2 span,
   clear: both;
 }
 
+.article-autor__left {
+  float: left;
+  color: #5e6167;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  margin-left: 15px;
+}
+
 .articlePreview-text {
   height: 70px;
   overflow: hidden;
@@ -4004,6 +4014,11 @@ h2 span,
 
 .comment {
   padding-left: 45px;
+}
+
+.comment_special {
+  margin-top: -15px;
+  margin-bottom: 15px;
 }
 
 .comment-box {
@@ -4060,13 +4075,15 @@ h2 span,
 }
 
 .comment__text {
+  max-height: 170px;
+  overflow-y: hidden;
   font-size: 14px;
   line-height: 20px;
 }
 
 .comment__text p {
   font-size: 1em;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   font-weight: 400;
 }
 
@@ -4079,6 +4096,76 @@ h2 span,
 .comment__link a {
   font-size: 1em;
   font-weight: 300;
+}
+
+.comment-long__showbtn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  color: #797c82;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  background-color: #ffffff;
+}
+
+.comment-long__showbtn:before {
+  content: "";
+  position: absolute;
+  display: block;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 91px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(#fff));
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+}
+
+.comment-long__showbtn i {
+  margin-left: 5px;
+  vertical-align: middle;
+  color: #bcbdc0;
+}
+
+.comment-long__showbtn i:before {
+  color: inherit;
+}
+
+.comment-long__showbtn > * {
+  position: relative;
+  z-index: 10;
+}
+
+.comment-form {
+  padding-bottom: 100px;
+}
+
+.comment-form__textareabox {
+  margin-bottom: 15px;
+}
+
+.comment-form__textarea {
+  width: 100%;
+  min-height: 114px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  border: 1px solid #bcbdc0;
+  padding: 18px;
+  resize: vertical;
+}
+
+.comment-form__btnbox {
+  text-align: right;
+}
+
+.comment-form__button {
+  min-width: 170px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -4245,6 +4332,11 @@ h2 span,
 
   .comment__link a:hover {
     font-weight: 400;
+  }
+
+  .comment-long__showbtn:hover {
+    letter-spacing: 0;
+    font-weight: 700;
   }
 }
 
