--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -33,6 +33,9 @@ input {
 	background-color: transparent;
 	border: none;
 }
+button, input, optgroup, select, textarea {
+	font-family: 'Roboto', sans-serif;
+}
 
 * {
 	margin: 0;
