--- a/pug/calendar.pug
+++ b/pug/calendar.pug
@@ -10,7 +10,8 @@ block content
 
 	- var ID = 'events-06-10-2018';
 	- var signTitle = 'События: '+eventDate;
-	include page/_page-sign-title
+	-var events = [{articleTitle: 'День металурга, ', articleID: 'event1-06-10-2018'}, {articleTitle: 'День поедателей йогуртов, ', articleID: 'event2-06-10-2018'}, {articleTitle: 'День металлурга 2', articleID: 'event3-06-10-2018'}];
+	include page/_page-calendar-sign-title
 
 	- var ID = 'event1-06-10-2018';
 	include articles/_article-01
