--- a/pug/post.pug
+++ b/pug/post.pug
@@ -180,7 +180,7 @@ block content
 			.comment.comment_special
 				.article-autor
 					p.article-autor__left Оставить комментарий:
-					p от Константина Константинопольского
+					p.article-autor__username от Константина Константинопольского
 			.comment
 				form.comment-form
 					.comment-form__textareabox
