--- a/pug/calendar2.pug
+++ b/pug/calendar2.pug
@@ -11,7 +11,8 @@ block content
 
 	- var ID = 'events-14-10-2018';
 	- var signTitle = 'События: '+eventDate;
-	include page/_page-sign-title
+	-var events = [{articleTitle: 'День металурга, ', articleID: 'event1-14-10-2018'}, {articleTitle: 'День поедателей йогуртов, ', articleID: 'event2-14-10-2018'}, {articleTitle: 'День металлурга 2', articleID: 'event3-14-10-2018'}];
+	include page/_page-calendar-sign-title
 
 	- var ID = 'event1-14-10-2018';
 	include articles/_article-01
