--- a/pug/calendar3.pug
+++ b/pug/calendar3.pug
@@ -11,6 +11,7 @@ block content
 
 	- var ID = 'events-24-10-2018';
 	- var signTitle = 'События: '+eventDate;
+	- var events = [{articleTitle: 'День поедателей йогуртов', articleID: 'event1-24-10-2018'}];
 	include page/_page-sign-title
 
 	- var ID = 'event1-24-10-2018';
