--- a/pug/calendar3.pug
+++ b/pug/calendar3.pug
@@ -12,7 +12,7 @@ block content
 	- var ID = 'events-24-10-2018';
 	- var signTitle = 'События: '+eventDate;
 	- var events = [{articleTitle: 'День поедателей йогуртов', articleID: 'event1-24-10-2018'}];
-	include page/_page-sign-title
+	include page/_page-calendar-sign-title
 
 	- var ID = 'event1-24-10-2018';
 	include articles/_article-02
