fix link color calendar

--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -89,7 +89,7 @@ h6, .h6,
 	&__link {
 		vertical-align: middle;
 		font-size: 14px;
-		color: $special-color;
+		// color: $special-color;
 		&:first-child {
 			margin-left: 5px;
 		}
