--- a/pug/post.pug
+++ b/pug/post.pug
@@ -55,7 +55,7 @@ block content
 		.content-title
 			.content-titlebox
 				h2 Комментарии
-	.card.card_slim
+	.card.card_slim#allComentators
 		- var items = [];
 		.comment#commentator_01
 			.comment-box
