--- a/pug/vidgets/_vidget-calendar.pug
+++ b/pug/vidgets/_vidget-calendar.pug
@@ -1,6 +1,6 @@
 // VIDGET vidget-calendar
 #calendarVidgetBox.vidget-box.vidget-calendar
-	.vidget-title
+	a.vidget-title.vidget-title_link(href="/calendar.html")
 		| КАЛЕНДАРЬ СОБЫТИЙ 
 		button.event-control
 			i.icon-arrow-down
