--- a/sass/_vidgets.scss
+++ b/sass/_vidgets.scss
@@ -150,6 +150,11 @@
 		font-size: 14px;
 		line-height: 17px;
 		font-weight: 300;
+		&_link {
+			@include hover {
+				text-decoration: underline;
+			}
+		}
 	}
 	&-subtitle {
 		position: relative;
