--- a/css/style.css
+++ b/css/style.css
@@ -2420,10 +2420,6 @@ h2 span,
   margin-right: -15px;
 }
 
-.content-title {
-  background-color: #ffffff;
-}
-
 .content-title::after {
   display: block;
   content: "";
@@ -2736,6 +2732,22 @@ h2 span,
   overflow: hidden;
 }
 
+.card__imgbox img {
+  display: none;
+}
+
+.card__imgbox_xl {
+  height: 360px;
+}
+
+.card__imgbox_lg {
+  height: 300px;
+}
+
+.card__imgbox_md {
+  height: 210px;
+}
+
 .card-warning-text {
   position: absolute;
   bottom: 0;
@@ -2768,6 +2780,48 @@ h2 span,
 
 .card__content .tagbox {
   margin-bottom: 20px;
+}
+
+.card__info {
+  padding: 15px 30px 30px;
+}
+
+.card__info_xl {
+  margin-top: 360px;
+}
+
+.card__info_light {
+  position: relative;
+  z-index: 1;
+}
+
+.card__info_light:after {
+  content: "";
+  position: absolute;
+  display: block;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 209px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(14%, rgba(0, 0, 0, 0.14)), to(#000000));
+  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+}
+
+.card__info_light .content-titlebox {
+  color: #fbfbfb;
+}
+
+.card__info_light .card__text {
+  color: #d0d1d3;
+}
+
+.card__info_light .card-slider-number {
+  color: #bcbdc0;
 }
 
 .card__title {
@@ -2917,6 +2971,14 @@ h2 span,
   padding-right: 15px;
 }
 
+.card-slider-number {
+  text-align: right;
+  color: #a1a3a7;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .cardFull {
   max-width: 100%;
   -webkit-box-flex: 0;
@@ -2994,6 +3056,11 @@ h2 span,
 .cardFull-slider__item {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.cardFull-slider__itembox_dark {
+  border: 1px solid #dddee0;
+  background-color: #f4f5f5;
 }
 
 .cardFull-slider__imgbox {
