--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -35,6 +35,18 @@
 		background: $light-color center no-repeat;
 		background-size: cover;
 		overflow: hidden;
+		img {
+			display: none;
+		}
+		&_xl {
+			height: 360px;
+		}
+		&_lg {
+			height: 300px;
+		}
+		&_md {
+			height: 210px;
+		}
 	}
 	&-warning-text {
 		position: absolute;
@@ -57,6 +69,34 @@
 		height: 100%;
 		.tagbox {
 			margin-bottom: 20px;
+		}
+	}
+	&__info {
+		padding: 15px 30px 30px;
+		&_xl{
+			margin-top: 360px;
+		}
+		&_light {
+			position: relative;
+			z-index: 1;
+			@include after {
+				z-index: -1;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				height: 209px;
+				border-radius: 5px;
+				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+			}
+			.content-titlebox {
+				color: #fbfbfb;
+			}
+			.card__text {
+				color: #d0d1d3;
+			}
+			.card-slider-number {
+				color: #bcbdc0;
+			}
 		}
 	}
 	&__title {
@@ -177,6 +217,13 @@
 			padding-left: 15px;
 			padding-right: 15px;
 		}
+		&-number {
+			text-align: right;
+			color: $thin-color;
+			font-family: Roboto;
+			font-size: 16px;
+			font-weight: 400;
+		}
 	}
 
 
@@ -234,6 +281,12 @@
 			&__item {
 				padding-left: 15px;
 				padding-right: 15px;
+			}
+			&__itembox {
+				&_dark {
+					border: 1px solid #dddee0;
+					background-color: #f4f5f5;
+				}
 			}
 			&__imgbox {
 				min-height: 210px;
