--- a/pug/gallery.pug
+++ b/pug/gallery.pug
@@ -1,6 +1,6 @@
 extends modules/_base
 block vars
-	-var pageTitle = 'Галерея "Изображение"';
+	- var pageTitle = 'Галерея "Изображение"';
 block content
 	include page/_page-special-title
 
@@ -10,9 +10,27 @@ block content
 	- var cardSettings = {title: 'Галерея - "Изображение", высота "300 px"', cardSize: 'lg', imgUrl: 'img/img-full-300.png'};
 	include cards/_cards-full-galery-img	
 
-	- var cardSettings = {title: 'Галерея - "Изображение", высота "210 px"', cardSize: 'md', imgUrl: 'img/img-full-210.png'};
+	- var cardSettings = {title: 'Галерея - "Изображение", высота "210 px"', cardSize: 'sm', imgUrl: 'img/img-full-210.png'};
 	include cards/_cards-full-galery-img
 
-	include cards/_cards-full-slider-galery
+	include cards/_cards-full-galery-slider-text
 
-	include cards/_cards-full-slider-galery-imgfull
+	include cards/_cards-full-galery-slider-imgfull-text
+
+	- var pageTitle = 'Галерея "Слайдер"';
+	include page/_page-special-title	
+
+	include cards/_cards-galery-slider-full
+
+	include cards/_cards-galery-slider-twothird-third
+	include cards/_cards-galery-slider-third-twothird
+	include cards/_cards-galery-slider-half
+	include cards/_cards-galery-slider-thirds
+
+
+	- var pageTitle = 'Галерея "Фотоотчет"';
+	include page/_page-special-title
+
+	include cards/_cards-galery-slider-thirds-3x3
+
+	include cards/_cards-galery-slider-mosaic
