--- a/pug/cards/_cards-galery-slider-half.pug
+++ b/pug/cards/_cards-galery-slider-half.pug
@@ -11,4 +11,5 @@
 	.card.card_slim
 		- var text= '24 Сентября 2018';
 		include ../modules/_tag-box
+		- var cardSettings = {advantClass: 'card__imgbox_sm'};
 	include _card-half-slider-galery
