--- a/pug/cards/_card-third-twothird-slider.pug
+++ b/pug/cards/_card-third-twothird-slider.pug
@@ -1,10 +1,10 @@
 .card.cardFull.cardFull-slider
 	.cardFull-slider-wrap.card-wrap.cardFull-wrap
 		.cardFull-slider__item
-			.article-imgwrap
-				.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-01.jpg)')
-				.article-imgbox.article-imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
+			.card__imgwrap
+				.card__imgbox.card__imgbox_third(style='background-image: url(img/article-img-01.jpg)')
+				.card__imgbox.card__imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
 		.cardFull-slider__item
-			.article-imgwrap
-				.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-01.jpg)')
-				.article-imgbox.article-imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
+			.card__imgwrap
+				.card__imgbox.card__imgbox_third(style='background-image: url(img/article-img-01.jpg)')
+				.card__imgbox.card__imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
