--- a/pug/cards/_cards-galery-slider-full.pug
+++ b/pug/cards/_cards-galery-slider-full.pug
@@ -1,4 +1,4 @@
-.cards
+#cardModalSlider-01.cards
 	.card.cardFull-head_special
 		.content-title
 			.content-titlebox_dark
@@ -12,4 +12,6 @@
 		- var text= '24 Сентября 2018';
 		include ../modules/_tag-box
 	include _card-full-slider
+
+	include ../modals/_modal-content-comments
 	
