--- a/pug/index.pug
+++ b/pug/index.pug
@@ -6,8 +6,8 @@ block content
 	include page/_page-head-filters
 
 	include cards/_card-full-advant-news
-
-	include cards/_card-full-slider
+	#cardModalSlider-01.cards
+		include cards/_card-full-slider
 
 	include cards/_card-half-slider
 
