--- a/css/style.css
+++ b/css/style.css
@@ -695,6 +695,229 @@ tbody.collapse.show {
   display: block;
 }
 
+.modal-open {
+  overflow: hidden;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  overflow: hidden;
+  outline: 0;
+}
+
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 0.5rem;
+  pointer-events: none;
+}
+
+.modal.fade .modal-dialog {
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
+  -o-transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  -webkit-transform: translate(0, -25%);
+      -ms-transform: translate(0, -25%);
+          transform: translate(0, -25%);
+}
+
+.modal.show .modal-dialog {
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.modal-dialog-centered {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: -webkit-calc(100% - (0.5rem * 2));
+  min-height: calc(100% - (0.5rem * 2));
+}
+
+.modal-content {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 0.3rem;
+          border-radius: 0.3rem;
+  outline: 0;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000;
+}
+
+.modal-backdrop.fade {
+  opacity: 0;
+}
+
+.modal-backdrop.show {
+  opacity: 0.5;
+}
+
+.modal-header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px solid #e9ecef;
+  -webkit-border-top-left-radius: 0.3rem;
+          border-top-left-radius: 0.3rem;
+  -webkit-border-top-right-radius: 0.3rem;
+          border-top-right-radius: 0.3rem;
+}
+
+.modal-header .close {
+  padding: 1rem;
+  margin: -1rem -1rem -1rem auto;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  line-height: 1.5;
+}
+
+.modal-body {
+  position: relative;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 1rem;
+}
+
+.modal-footer {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 1rem;
+  border-top: 1px solid #e9ecef;
+}
+
+.modal-footer > :not(:first-child) {
+  margin-left: .25rem;
+}
+
+.modal-footer > :not(:last-child) {
+  margin-right: .25rem;
+}
+
+.modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+
+.preloader {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999999;
+  display: block;
+  background: #fff;
+}
+
+.page-loader-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 36px;
+  height: 36px;
+  margin: -18px 0 0 -18px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  border: 2px solid;
+  border-top-color: #222222;
+  border-bottom-color: rgba(0, 0, 0, 0.15);
+  border-left-color: #222222;
+  border-right-color: rgba(0, 0, 0, 0.15);
+  -webkit-animation: page-loader-circle 0.8s linear infinite;
+  animation: page-loader-circle 0.8s linear infinite;
+}
+
+@keyframes page-loader-circle {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes page-loader-circle {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 a:hover,
 a:focus,
 a:active,
@@ -925,14 +1148,22 @@ h2 span,
   left: 15px;
   -webkit-border-radius: 5px 0 0 5px;
           border-radius: 5px 0 0 5px;
-  background: rgba(255, 255, 255, 0.2) url(../img/icon/slider-arrow-left.svg) center no-repeat/65%;
+  background: rgba(255, 255, 255, 0.2) url(../img/icon/slider-arrow-left.svg) center no-repeat;
+  -webkit-background-size: 65% 65%;
+          background-size: 65%;
 }
 
 .slider-arrow__right {
   right: 15px;
   -webkit-border-radius: 0 5px 5px 0;
           border-radius: 0 5px 5px 0;
-  background: rgba(255, 255, 255, 0.2) url(../img/icon/slider-arrow-right.svg) center no-repeat/65%;
+  background: rgba(255, 255, 255, 0.2) url(../img/icon/slider-arrow-right.svg) center no-repeat;
+  -webkit-background-size: 65% 65%;
+          background-size: 65%;
+}
+
+.slick-slide {
+  font-size: 0;
 }
 
 .link {
@@ -1353,6 +1584,101 @@ h2 span,
 
 .label-valid {
   color: #39b54a;
+}
+
+.modal-backdrop.show {
+  opacity: 0.7;
+}
+
+.modalMain-preload .modal-dialog {
+  max-height: 750px;
+  overflow: hidden;
+}
+
+.modalMain .modal-content {
+  position: relative;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  overflow: hidden;
+  background-color: transparent;
+  border: none;
+}
+
+.modalMain__content {
+  text-align: center;
+}
+
+.modalMain-slider-wrap {
+  padding: 0 30px;
+}
+
+.modalMain-slider__item {
+  overflow: hidden;
+  font-size: 0;
+}
+
+.modalMain-slider__item .card-image {
+  -webkit-border-radius: 0;
+          border-radius: 0;
+  height: 700px;
+  max-width: none;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modalMain-slider-arrow__left {
+  left: 0;
+}
+
+.modalMain-slider-arrow__right {
+  right: 0;
+}
+
+.modalMain-slider-title .post-info {
+  display: block;
+}
+
+.modalMain-slider-bottom .modalMain-slider-wrap {
+  padding: 0 25px;
+}
+
+.modalMain-slider-bottom .modalMain-slider__item {
+  padding: 0 5px;
+}
+
+.modalMain-slider-bottom .slick-current.slick-active .modalMain-slider__imgbox {
+  border: 3px solid #d0d1d3;
+}
+
+.modalMain-slider-bottom .modalMain-slider__imgbox {
+  height: 100px;
+  max-width: 150px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.modalMain-slider-bottom .modalMain-slider__imgbox img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modalMain-comments .comments-dark {
+  display: block;
+}
+
+.modalMain-close {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  padding: 0;
+}
+
+.modalMain-close img {
+  height: 12px;
+  width: 12px;
 }
 
 .header.scroll {
@@ -2740,7 +3066,7 @@ h2 span,
   width: 100%;
   height: 100%;
   background-color: #000000;
-  opacity: 0.1;
+  opacity: 0.3;
   -webkit-transition: opacity 0.4s;
   -o-transition: opacity 0.4s;
   transition: opacity 0.4s;
@@ -2760,6 +3086,11 @@ h2 span,
   -webkit-transition: opacity 0.4s;
   -o-transition: opacity 0.4s;
   transition: opacity 0.4s;
+  opacity: 0.6;
+}
+
+.card__imgwrap {
+  margin-bottom: 30px;
 }
 
 .card__imgwrap::after {
@@ -2768,14 +3099,23 @@ h2 span,
   clear: both;
 }
 
+.card__imgwrap_slim {
+  margin-bottom: 15px;
+}
+
+.card__imgwrap:last-child {
+  margin-bottom: 0;
+}
+
 .card__imgbox {
   position: relative;
+  min-height: 210px;
+  overflow: hidden;
   -webkit-border-radius: 5px;
           border-radius: 5px;
   background: #ffffff center no-repeat;
   -webkit-background-size: cover;
           background-size: cover;
-  overflow: hidden;
 }
 
 .card__imgbox img {
@@ -2816,8 +3156,8 @@ h2 span,
 
 .card__imgbox_twothird {
   float: left;
-  width: -webkit-calc(66.66666% - 10px);
-  width: calc(66.66666% - 10px);
+  width: -webkit-calc(66.66666% - 5px);
+  width: calc(66.66666% - 5px);
   margin-right: 15px;
 }
 
@@ -2834,6 +3174,12 @@ h2 span,
 
 .card__imgbox_half:last-child {
   margin-right: 0;
+}
+
+.card-image {
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  overflow: hidden;
 }
 
 .card-warning-text {
@@ -4327,10 +4673,10 @@ h2 span,
   left: 0;
   width: 100%;
   height: 91px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(#fff));
-  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 100%);
-  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 100%);
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(65%, #fff));
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 65%);
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 65%);
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 65%);
 }
 
 .comment-long__showbtn i {
@@ -4376,6 +4722,141 @@ h2 span,
 
 .comment-form__button {
   min-width: 170px;
+}
+
+.comments-dark {
+  display: none;
+  margin-top: 30px;
+  padding: 15px 120px;
+  margin-bottom: 30px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #5e6167;
+}
+
+.comments-dark .content-titlebox {
+  color: #eeefef;
+}
+
+.comments-dark .comment-box {
+  text-align: left;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  border: 1px solid #bcbdc0;
+  background-color: #eeefef;
+}
+
+.comments-dark .comment-form {
+  padding-bottom: 15px;
+}
+
+.comments-dark .comment-form__textarea {
+  background-color: #eeefef;
+}
+
+.comments-dark .comment-long__showbtn {
+  background-color: #eeefef;
+}
+
+.comments-dark .comment-long__showbtn:before {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(#eeefef));
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
+}
+
+.comments-dark .article-autor {
+  padding: 0 15px;
+  background-color: rgba(251, 251, 251, 0.3);
+  color: #eeefef;
+}
+
+.post-info {
+  display: none;
+  padding: 15px 30px 20px;
+}
+
+.post-info::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.post-info__title {
+  float: left;
+  max-width: 970px;
+  font-size: 22px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: left;
+}
+
+.post-info__title .slider-number {
+  color: #a1a3a7;
+  margin-right: 5px;
+}
+
+.post-info__like {
+  text-align: right;
+}
+
+.post-info__like::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.post-info__likebox {
+  float: right;
+}
+
+.post-info__date {
+  display: inline-block;
+  color: #bcbdc0;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 20px;
+  vertical-align: middle;
+}
+
+.post-info .like-button {
+  color: #bcbdc0;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.post-info .like-button.active {
+  color: #ee3124;
+}
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 500px;
+    margin: 1.75rem auto;
+  }
+
+  .modal-dialog-centered {
+    min-height: -webkit-calc(100% - (1.75rem * 2));
+    min-height: calc(100% - (1.75rem * 2));
+  }
+
+  .modal-sm {
+    max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .button {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .modal-lg {
+    max-width: 800px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -4457,6 +4938,10 @@ h2 span,
     font-weight: 600;
   }
 
+  .modalMain-comments__curentImg:hover {
+    font-weight: 700;
+  }
+
   .headerNavSystem__item:hover {
     color: #ee3124;
   }
@@ -4517,11 +5002,11 @@ h2 span,
   }
 
   .card__videobox:hover:before {
-    opacity: 0.3;
+    opacity: 0.1;
   }
 
   .card__videobox:hover:after {
-    opacity: 0.6;
+    opacity: 1;
   }
 
   .card__title a:hover {
@@ -4564,11 +5049,14 @@ h2 span,
     letter-spacing: 0;
     font-weight: 700;
   }
+
+  .post-info .like-button:hover {
+    color: #ffffff;
+  }
 }
 
-@media screen and (max-width: 780px) {
-  .button {
-    margin-left: auto;
-    margin-right: auto;
+@media screen and (min-width: 1230px) {
+  .modalMain .modal-dialog {
+    max-width: 1200px;
   }
 }
