--- a/pug/cards/_card-half-slider-galery.pug
+++ b/pug/cards/_card-half-slider-galery.pug
@@ -3,14 +3,14 @@ if cardSettings === undefined
 .card.cardFull.cardFull-slider
 	.cardFull-slider-wrap.card-wrap.cardFull-wrap
 		.cardFull-slider__item
-			.article-imgwrap
+			.card__imgwrap
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/block-img-01.jpg)')
 		.cardFull-slider__item
-			.article-imgwrap
+			.card__imgwrap
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/block-img-05.jpg)')
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/article-img-01.jpg)')
 		.cardFull-slider__item
-			.article-imgwrap
+			.card__imgwrap
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/block-img-05.jpg)')
