--- a/pug/cards/_card-third-slider-3x3.pug
+++ b/pug/cards/_card-third-slider-3x3.pug
@@ -5,19 +5,19 @@
 		- var imgBoxClass ='';
 
 		.cardFull-slider__item
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['03', '12', '01'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['06', '05', '04'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['09', '10', '07'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
@@ -25,19 +25,19 @@
 						img(src=imgUrl, class=imgClass)
 
 		.cardFull-slider__item
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['03', '12', '01'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['06', '05', '04'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['09', '10', '07'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
@@ -45,19 +45,19 @@
 						img(src=imgUrl, class=imgClass)
 
 		.cardFull-slider__item
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['03', '12', '01'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['06', '05', '04'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
-			.article-imgwrap.article-imgwrap_slim
+			.card__imgwrap.card__imgwrap_slim
 				- var items = ['09', '10', '07'];
 				each item in items
 					- var imgUrl = 'img/block-img-'+item+'.jpg';
