--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -43,26 +43,28 @@ html(lang='ru')
 					.col-12
 						button#btnUp.button.button-up
 							i.icon-arrow-down
-			// /.container
-			// /.footer
-			// jQuery
-			script(src='js/libs/jquery.min.js')
-			// jQuery-UI
-			script(src='jquery-ui-1.12.1.custom/jquery-ui.min.js')
-			script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')
-			script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')
-			script(src='js/libs/jquery.dotdotdot.js')
-			// slick
-			script(src='slick/slick.min.js')
-			// Bootstrap
-			script(src='js/libs/bootstrap/bootstrap.bundle.min.js')
-			script(src='js/libs/jquery.actual.min.js')
-			// Валидация
-			script(src='js/libs/validate/jquery.validate.min.js')
-			script(src='js/libs/jquery.maskedinput.min.js')
-			// main script
-			script(src='js/main/main.js'+version)
-			//if lte IE 9
-				link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
-				link(rel='stylesheet', href='ie9/css/style-ie9.css')
-				script(src='ie9/js/bootstrap-ie9.js')
+		include ../modals/_modal
+		include ../modals/_modal-content-slider
+		// /.container
+		// /.footer
+		// jQuery
+		script(src='js/libs/jquery.min.js')
+		// jQuery-UI
+		script(src='jquery-ui-1.12.1.custom/jquery-ui.min.js')
+		script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')
+		script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')
+		script(src='js/libs/jquery.dotdotdot.js')
+		// slick
+		script(src='slick/slick.min.js')
+		// Bootstrap
+		script(src='js/libs/bootstrap/bootstrap.bundle.min.js')
+		script(src='js/libs/jquery.actual.min.js')
+		// Валидация
+		script(src='js/libs/validate/jquery.validate.min.js')
+		script(src='js/libs/jquery.maskedinput.min.js')
+		// main script
+		script(src='js/main/main.js'+version)
+		//if lte IE 9
+			link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
+			link(rel='stylesheet', href='ie9/css/style-ie9.css')
+			script(src='ie9/js/bootstrap-ie9.js')
