--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -249,7 +249,8 @@ section, .section {
 	&__left {
 		left: 15px;
 		border-radius: 5px 0 0 5px;
-		background: rgba($light-color, 0.2) url(../img/icon/slider-arrow-left.svg) center no-repeat / 65%;
+		background: rgba($light-color, 0.2) url(../img/icon/slider-arrow-left.svg) center no-repeat; 
+		background-size: 65%;
 		@include hover {
 			background-color: rgba($light-color, 0.35);
 		}
@@ -258,9 +259,13 @@ section, .section {
 	&__right {
 		right: 15px;
 		border-radius: 0 5px 5px 0;
-		background: rgba($light-color, 0.2) url(../img/icon/slider-arrow-right.svg) center no-repeat / 65%;
+		background: rgba($light-color, 0.2) url(../img/icon/slider-arrow-right.svg) center no-repeat; 
+		background-size: 65%;
 		@include hover {
 			background-color: rgba($light-color, 0.35);
 		}
 	}
+}
+.slick-slide {
+	font-size: 0;
 }
