--- a/sass/general/_modalMain.scss
+++ b/sass/general/_modalMain.scss
@@ -1,29 +1,112 @@
+.modal-backdrop.show {opacity: 0.7;}
 .modalMain {
-  .modal-dialog {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    margin: 0 auto;
-    // align-items: center;
+	&-preload {
+		.modal-dialog {
+			max-height: 750px;
+			overflow: hidden;			
+		}
+	}
+	.modal {
+		&-dialog {
+			@include xl-block() {
+				max-width: 1200px;
+			}
+		}
 
-  }
+		&-content {
+			position: relative;
+			border-radius: 5px;
+			overflow: hidden;
+			background-color: transparent;
+			border: none;
+		}
+		&-backdrop {
 
-  &-content {
-    position: relative;
-    border-radius: 3px;
-    background-color: $light-color;
-  }
+		}
+	}
+	&__content {
+		text-align: center;
+	}
+	&-slider {
 
-  &-close {
-    position: absolute;
-    top: -20px;
-    right: -20px;
-    padding: 0;
-    img {
-      @include sqwer(12px);
-      
-    }
+		&-wrap {
+			padding: 0 30px;
+		}
+		&__item {
+			// padding: 0 30px;
+			// width: 1100px;
+			// min-height: 700px;
+			overflow: hidden;
+			font-size: 0;
+			.card-image {
+				border-radius: 0;
+				height: 700px;
+				max-width: none;
+				width: 100%;
+				// height: 100%;
+				object-fit: cover;
+			}
+		}
+		&-arrow {
+			// width: 20px;
+			&__left {
+				left: 0;
+			}
+			&__right {
+				right: 0;
+			}
+		}
+		&-title {
+			.post-info {
+				display: block;
+			}
+		}
+		&-bottom {
+			.modalMain-slider-wrap {
+				padding: 0 25px;
+			}
+			.modalMain-slider__item {
+				padding: 0 5px;
+			}
+			.slick-current.slick-active {
+				.modalMain-slider__imgbox {
+					border: 3px solid #d0d1d3;
+				}
+			}
+			.modalMain-slider__imgbox {
+				height: 100px;
+				max-width: 150px;
+				overflow: hidden;
+				cursor: pointer;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+				
+			}
+		}
+	}
+	&-comments {
+		.comments-dark {
+			display: block;
+		}
+		&__curentImg {
+			@include hover {
+				font-weight: 700;
+			}
+		}
+	}
 
-  }
+	&-close {
+		position: absolute;
+		top: -20px;
+		right: -20px;
+		padding: 0;
+		img {
+			@include sqwer(12px);
+			
+		}
+
+	}
 }
