--- a/sass/general/_smart-grid.scss
+++ b/sass/general/_smart-grid.scss
@@ -1,18 +1,21 @@
 $columns: 12;
 $atom: (100% / $columns);
 
-$break_lg: 1100px;
-$break_md: 960px;
-$break_sm: 780px;
-$break_xs: 560px;
+$break_xl: 1230px;
+$break_lg: 992px;
+$break_md: 768px;
+$break_sm: 576px;
+$break_xs: 0;
 
 $offset: 30px;
+$offset_xl: $offset;
 $offset_lg: $offset;
 $offset_md: $offset;
 $offset_sm: $offset;
 $offset_xs: $offset;
 
 $offset_one_side: ($offset / 2);
+$offset_xl_one_side: ($offset_xl / 2);
 $offset_lg_one_side: ($offset_lg / 2);
 $offset_md_one_side: ($offset_md / 2);
 $offset_sm_one_side: ($offset_sm / 2);
@@ -87,6 +90,11 @@ $fields_sm: 15px;
     width: #{calc(#{$val} - #{$offset})};
 }
 
+@mixin size-xl($n){
+    $val: 100% / $columns * $n;
+    @include xl(width, #{calc(#{$val} - #{$offset_xl})});
+}
+
 @mixin size-lg($n){
     $val: 100% / $columns * $n;
     @include lg(width, #{calc(#{$val} - #{$offset_lg})});
@@ -137,6 +145,38 @@ $fields_sm: 15px;
 @mixin shift-padding-right($n){
     $val: 100% / $columns * $n;
     padding-right: #{calc(#{$val} + #{$offset_one_side})};
+}
+
+@mixin shift-xl($n){
+    $val: 100% / $columns * $n;
+    @include xl(margin-left, #{calc(#{$val} + #{$offset_xl_one_side})});
+    @include xl(margin-right, #{calc(#{$val} + #{$offset_xl_one_side})});
+}
+
+@mixin shift-xl-left($n){
+    $val: 100% / $columns * $n;
+    @include xl(margin-left, #{calc(#{$val} + #{$offset_xl_one_side})});
+}
+
+@mixin shift-xl-right($n){
+    $val: 100% / $columns * $n;
+    @include xl(margin-right, #{calc(#{$val} + #{$offset_xl_one_side})});
+}
+
+@mixin shift-xl-padding($n){
+    $val: 100% / $columns * $n;
+    @include xl(padding-left, #{calc(#{$val} + #{$offset_xl_one_side})});
+    @include xl(padding-right, #{calc(#{$val} + #{$offset_xl_one_side})});
+}
+
+@mixin shift-xl-padding-left($n){
+    $val: 100% / $columns * $n;
+    @include xl(padding-left, #{calc(#{$val} + #{$offset_xl_one_side})});
+}
+
+@mixin shift-xl-padding-right($n){
+    $val: 100% / $columns * $n;
+    @include xl(padding-right, #{calc(#{$val} + #{$offset_xl_one_side})});
 }
 
 @mixin shift-lg($n){
@@ -267,50 +307,62 @@ $fields_sm: 15px;
     @include xs(padding-right, #{calc(#{$val} + #{$offset_xs_one_side})});
 }
 
+@mixin xl($name, $value){
+    @media screen and (min-width: $break_xl){
+        #{$name}: $value;
+    }
+}
+
+@mixin xl-block(){
+    @media screen and (min-width: $break_xl){
+        @content;
+    }
+}
+
 @mixin lg($name, $value){
-    @media screen and (max-width: $break_lg){
+    @media screen and (min-width: $break_lg){
         #{$name}: $value;
     }
 }
 
 @mixin lg-block(){
-    @media screen and (max-width: $break_lg){
+    @media screen and (min-width: $break_lg){
         @content;
     }
 }
 
 @mixin md($name, $value){
-    @media screen and (max-width: $break_md){
+    @media screen and (min-width: $break_md){
         #{$name}: $value;
     }
 }
 
 @mixin md-block(){
-    @media screen and (max-width: $break_md){
+    @media screen and (min-width: $break_md){
         @content;
     }
 }
 
 @mixin sm($name, $value){
-    @media screen and (max-width: $break_sm){
+    @media screen and (min-width: $break_sm){
         #{$name}: $value;
     }
 }
 
 @mixin sm-block(){
-    @media screen and (max-width: $break_sm){
+    @media screen and (min-width: $break_sm){
         @content;
     }
 }
 
 @mixin xs($name, $value){
-    @media screen and (max-width: $break_xs){
+    @media screen and (min-width: $break_xs){
         #{$name}: $value;
     }
 }
 
 @mixin xs-block(){
-    @media screen and (max-width: $break_xs){
+    @media screen and (min-width: $break_xs){
         @content;
     }
 }
@@ -331,6 +383,24 @@ $fields_sm: 15px;
     @media screen and (min-width: $min_width) and (max-width: $max_width){
         @content;
     }
+}
+
+@mixin u-row-flex($offset){
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: ($offset / -2);
+    margin-right: ($offset / -2);
+}
+
+@mixin u-col($offset){
+    box-sizing: border-box;
+    word-wrap: break-word;
+    margin-left: ($offset / 2);
+    margin-right: ($offset / 2);
+}
+
+@mixin u-size($n, $columns, $offset){
+    width: #{calc(100% / #{$columns} * #{$n} - #{$offset})};
 }
 
 @mixin reset(){
